update fisherman registration feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         <activity android:name=".BoatListActivity" ></activity>
         <activity android:name=".BoatDetailsActivity" ></activity>
         <activity android:name=".DepartureActivity" ></activity>
+        <activity android:name=".ViewDepartureActivity"></activity>
+
 
 
     </application>
