--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
 
     <application
@@ -38,6 +40,7 @@
         <activity android:name=".BoatListActivity" ></activity>
         <activity android:name=".BoatDetailsActivity" ></activity>
         <activity android:name=".DepartureActivity" ></activity>
+        <activity android:name=".ViewDepartureActivity" ></activity>
 
 
     </application>
